# web

./: LICENSE  README.md  pyproject.toml
web/: __init__.py  __main__.py  constants.py  core.py  main.py
web/modules/: __init__.py  email.py  github.py  home.py  redirect.py
web/templates/: base.html  home.html
