[tool.poetry]
name = "web"
version = "0.1.0"
description = "..."
authors = ["gd-programming"]
license = "MIT"

readme = "README.md"

homepage = "https://gd-programming.org/"
repository = "https://github.com/gd-programming/web"

keywords = ["python", "web"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://gd-programming.org/discord"
Issues = "https://github.com/gd-programming/web/issues"

[[tool.poetry.packages]]
include = "web"

[tool.poetry.scripts]
"web" = "web.main:web"

[tool.poetry.dependencies]
python = ">= 3.7"
aiohttp = ">= 3.8.1"
click = ">= 8.1.3"
jinja2 = ">= 3.1.2"
entrypoint = ">= 1.2.4"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "22.6.0"

[tool.poetry.group.format.dependencies.isort]
version = "5.10.1"
python = "^3.7"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy = "0.961"

[tool.black]
line_length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
show_column_numbers = true

disallow_any_decorated = true
disallow_any_generics = true
warn_return_any = true

no_implicit_optional = true
strict_optional = true

strict_equality = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_globals = true

disallow_incomplete_defs = true

warn_no_return = true
warn_unreachable = true

warn_redundant_casts = true
warn_unused_ignores = false  # compatibility

[build-system]
requires = ["poetry-core >= 1.1.0b2"]
build-backend = "poetry.core.masonry.api"
